# Localvore

./: .gitignore  README.md  app.py  clustering.py  eda.ipynb  models.py  pyproject.toml  scraper.py
ella/: 12-vegetarian-millet-recipes.html  13-vegetarian-beet-recipes.html  13-vegetarian-holiday-main-dishes.html  13-vegetarian-pasta-recipes-for-fall.html  15-late-summer-vegetarian-recipes.html  15-vegetarian-butternut-squash-recipes-for-late-winter.html  15-vegetarian-quinoa-recipes-for-every-meal.html  17-ways-to-use-up-cilantro-and-parsley.html  19-veg-friendly-party-snacks.html  19-vegan-spring-recipes.html  19-vegetarian-bowls-for-winter.html  19-vegetarian-grilling-recipes.html  19-vegetarian-lentil-recipes.html  21-breakfast-recipes-for-the-holidays.html  21-kid-friendly-vegetarian-recipes.html  21-vegetarian-sweet-potato-recipes.html  21-weeknight-vegetarian-dinners.html  23-vegetarian-soup-recipes-for-fall.html  25-vegetarian-root-vegetable-recipes.html  29-vegan-recipes-for-fall.html  30-minute-vegetarian-dinners.html  5-ingredient-homemade-granola.html  5-pantry-must-haves-+-recipes.html  5-tips-for-eating-more-plant-based-recipes.html  5-tips-for-vegetarian-lunches.html  5-ways-to-cook-vegetables.html  8-compendium-cookbooks-to-have-on-hand.html  a-vegetarian-holiday-meal-guide.html  a-week-in-meals-(april).html  a-week-in-meals-(winter-edition)-+-planning-ahead.html  a-week-in-meals-|-august.html  a-week-in-meals-|-june.html  a-week-in-meals-|-october.html  acorn-squash-risotto-with-farro.html  adobo-acorn-squash,-crispy-quinoa,-and-chimichurri.html  (+751 more)
(+38 files in other folders)
