[tool.poetry]
name = "localvore"
version = "0.1.3"
description = "A recipe reccomendation engine that utilizes ingredients that are in-season locally"
authors = ["Dal Williams <dendrondal@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
pymongo = "^3.10.0"
bson = "^0.5.8"
requests-html = "^0.9.0"
tqdm = "^4.41.1"
loguru = "^0.4.0"
spacy = "^2.2.3"
scikit-learn = "^0.22.1"
sklearn = "^0.0"
statsmodels = "^0.10.2"
ijson = "^2.5.1"
altair = "^4.0.0"

[tool.poetry.scripts]
make_db = "localvore:ETL_pipeline"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

